package ar.edu.utn.frba.dds.domain.notificaciones;

public interface Notificable {
    public String getInfo();
}
