package ar.edu.utn.frba.dds.notificaciones.email;

public interface AdapterMAIL {
    public void enviarMAIL(String mensaje, String destinatario);
}
