package ar.edu.utn.frba.dds.notificaciones.wpp;

public interface AdapterWPP {
    public void enviarWPP(String mensaje, int telefono);
}
